fix overlapping points

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
-  height: 100vh;
   width: 100vw;
 }
 
